--- a/style.css
+++ b/style.css
@@ -1,33 +1,71 @@
 body{
-    background-color: white;
+    background-color: lightcoral;
     color: black;
     font-size: 25px;
+    font-style: Work Sans, Comic Sans MS,sans-serif;
 }    
 #id {
     color: black;
 }
 h1{
     color: black;
-    font-size: xx-large;
+    font: size 100px;
     text-align: center;
     width: 800px;
     margin: 60px auto;
-    font-family: sans-serif;
-    background-color: white
-
+    padding-top: 20px;
+    background-color: lightblue;
+    font-style: italic;
+    border: 5px solid lightseagreen;
     ;
 }
 h2{
     color: black;
-    font-size: xx-large;
+    font-size: 30px;
     text-align: center;
     width: 800px;
-    margin: 50px auto;
-    font-family: sans-serif;
-    background-color: white
-    ;
+    margin: 0px auto;
+    padding-top: 20px;
+    background-color: lightgoldenrodyellow;
+    font-family: "Work Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    border: 2px solid lightgreen;
 }
-
+h3{
+margin: 40px;
+background-color: lightcoral;
+}
+h4{
+ color: black;
+    font-size: 30px;
+    text-align: center;
+    width: 800px;
+    margin: 0px auto;
+    padding-top: 20px;
+    background-color: lightgoldenrodyellow;
+    font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  border: 2px solid lightgreen;
+}
+h5{
+    color: black;
+    font-size: 30px;
+    text-align: center;
+    width: 800px;
+    margin: 0px auto;
+    padding-top: 20px;
+    background-color: lightgoldenrodyellow;
+    font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  border: 2px lightgreen;
+}
 span {
     color: red;
+    font-size: 50px;
 }
